# scan_projects

./: README.md  pyproject.toml
src/scan_projects/: __init__.py  scan_projects.py
