[project]
name = "scan-projects"
version = "0.1.0"
description = "A tool to scan and analyze project directories with UV support"
readme = "README.md"
authors = [
    { name = "Ricklon", email = "rick.rickanderson@gmail.com" }
]
requires-python = ">=3.12.3"
dependencies = []
license = { text = "MIT" }
keywords = ["uv", "project-management", "development-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
scan-projects = "scan_projects.scan_projects:main"

[project.urls]
Repository = "https://github.com/ricklon/scan-projects"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scan_projects"]


[tool.hatch.build]
include = [
    "src/scan_projects/**/*.py",
]